# RepoRadar

./: .editorconfig  .env.example  .gitignore  PLAN-deep-synthesis.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  errors.py  event_bridge_health.py  event_broadcaster.py  logging.py
backend/app/models/: __init__.py  agent_event.py  artifact.py  repository.py
backend/app/repositories/: agent_event_repository.py  idea_family_repository.py  idea_scout_repository.py  intake_runtime_repository.py  memory_repository.py  obsession_repository.py  repository_artifact_payload_repository.py  repository_curation_repository.py  repository_exploration_repository.py  repository_triage_repository.py  synthesis_repository.py
backend/app/schemas/: agent_config.py  agent_event.py  agent_timeline.py  common.py  gateway_contract.py  idea_family.py  idea_scout.py  incident.py  memory.py  obsession.py  overlord.py  overview.py  repository_curation.py  repository_exploration.py  repository_triage.py  settings.py  synthesis.py
backend/app/services/: agent_config_service.py  agent_event_service.py  agent_metadata.py  agent_operator_service.py  agent_runtime_progress_service.py  artifact_payload_backfill_service.py  artifact_storage_status_service.py  backfill_timeline_service.py  idea_family_service.py  idea_scout_service.py  intake_runtime_service.py  memory_service.py  obsession_service.py  overlord_service.py  overview_service.py  repository_curation_service.py  repository_exploration_service.py  repository_triage_service.py  runtime_history_archive_service.py  settings_service.py  synthesis_service.py
backend/migrations/: env.py
backend/migrations/versions/: 20260307_0001_create_repository_intake_schema.py  20260307_0002_add_firehose_mode_to_repository_intake.py  20260308_0003_add_backfill_progress_table.py  (+41 more)
backend/scripts/: archive_runtime_history.py  backfill_artifact_payloads.py
backend/tests/: conftest.py
workers/: .env.example  README.md  pyproject.toml  test_gemini.py
workers/agentic_workers/: main.py
workers/tests/: test_checkpoint_validation.py  test_config.py  test_crash_recovery.py  test_events.py  test_job_events.py  test_queue_recovery.py
(+474 files in other folders)
